--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+/* * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -120,4 +120,4 @@ ol {
   .posts {
     grid-template-columns: 1fr;
   }
-}
+} */
